# sqladmin-whiteleads

./: .gitignore  pyproject.toml
sqladmin/: ajax.py  application.py  forms.py
src/: __init__.py
src/sqladmin_whiteleads/: __init__.py  _menu.py  _queries.py  ajax.py  application.py  fields.py  filters.py  forms.py  helpers.py  models.py  widgets.py
