[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqladmin_whiteleads"
version = "1.4.0.11"
dependencies = [
  "starlette",
  "sqlalchemy >=1.4",
  "wtforms >=3.1, <3.2",
  "jinja2",
  "python-multipart",
]
authors = [
    {name = "Artem Ivanov", email = "nightcore194@gmail.com"},
    {name = "Olga Kozynkina", email = "ko3.olga@gmail.com"}
]
description = "Fork of SQLAdmin with custom modifications"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/whiteleads-it/sqladmin-whiteleads"

[tool.setuptools]
packages = ["sqladmin_whiteleads"]
package-dir = {"sqladmin_whiteleads" = "src/sqladmin_whiteleads"}
include-package-data = true

[tool.setuptools.package-data]
sqladmin_whiteleads = [
    "statics/*",
    "templates/*",
    "statics/**/*",
    "templates/**/*",
]