[project]
name = "sqladmin_whiteleads"
version = "1.4.0.12"
description = "Fork of SQLAdmin with custom modifications"
authors = [
    { name = "Artem Ivanov", email = "nightcore194@gmail.com" },
    { name = "Olga Kozynkina", email = "ko3.olga@gmail.com" },
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "starlette",
    "sqlalchemy >=1.4",
    "wtforms >=3.1, <3.2",
    "jinja2",
    "python-multipart",
]

[project.urls]
Homepage = "https://github.com/whiteleads-it/sqladmin-whiteleads"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sqladmin_whiteleads"]
package-dir = {"sqladmin_whiteleads" = "src/sqladmin_whiteleads"}
include-package-data = true

[tool.setuptools.package-data]
sqladmin_whiteleads = [
    "statics/*",
    "templates/*",
    "statics/**/*",
    "templates/**/*",
]

[tool.uv.index]
name = "pypi"
url = "https://pypi.org/project/sqladmin-whiteleads/"
publish-url = "https://pypi.org/project/sqladmin-whiteleads/"
explicit = true